# agent-worktree

./: .agent-worktree.toml  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  README.zh-CN.md
npm/agent-worktree/: install.js  package.json
npm/agent-worktree-darwin-arm64/: package.json
npm/agent-worktree-darwin-x64/: package.json
npm/agent-worktree-linux-x64/: package.json
npm/agent-worktree-win32-x64/: package.json
scripts/: README.md  build-npm.sh  publish-npm.sh
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: cd.rs  clean.rs  init.rs  ls.rs  main.rs  merge.rs  mod.rs  move.rs  new.rs  rm.rs  setup.rs  snap_continue.rs  status.rs  sync.rs  update.rs
src/cli/commands/lifecycle/: clean.rs  mod.rs  new.rs  rm.rs
src/cli/commands/nav/: cd.rs  mod.rs
src/cli/commands/snap/: resume.rs
src/cli/commands/sys/: init.rs  update.rs
src/complete/: mod.rs
src/config/: mod.rs
src/git/: branch.rs  mod.rs  ops.rs  repo.rs  worktree.rs
src/git/tests/: mod.rs  ops.rs
src/meta/: mod.rs
src/process/: mod.rs
src/prompt/: mod.rs
src/shell/: mod.rs  tests.rs
src/update/: mod.rs
src/util/: branch_name.rs  mod.rs
tests/: cmd_cd.rs  cmd_clean.rs  cmd_complete.rs  cmd_help.rs  cmd_hooks.rs  cmd_init.rs  cmd_ls.rs  cmd_main.rs  cmd_merge.rs  cmd_misc.rs  cmd_mv.rs  cmd_new.rs  cmd_rm.rs  cmd_snap.rs  cmd_status.rs  cmd_sync.rs  integration.rs
tests/common/: mod.rs
