[package]
name = "agent-worktree"
version = "0.4.2"
edition = "2021"
description = "Git worktree workflow tool for AI coding agents"
license = "MIT"
repository = "https://github.com/nekocode/agent-worktree"
keywords = ["cli", "git", "worktree", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rand = "0.9"
dialoguer = "0.11"
ignore = "0.4"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
